# medtutor

./: .gitignore
api/: .envrc  Makefile  ai.py  main.py  prompts.py  pyproject.toml  searcher.py
api/chains/: __init__.py  router.py  test_router.py
api/classifier/: __init__.py  base.py  classifier.py  cohere_classifier.py  examples.py  mock_classifier.py  test_classifier.py  test_integration_cohere_classifier.py
api/prompts/: __init__.py  conversations.py  questions.py
api/router/: __init__.py  router.py
scrapper/: .env  database.db  downloader.py  embeddings.py  init_db.py  references.txt  uptodate.py
scrapper/utils/: database.py
webapp/: index.html  package-lock.json  package.json
webapp/src/: App.svelte  app.css
